--- a/angular.json
+++ b/angular.json
@@ -117,6 +117,10 @@
               "devServerTarget": "peliculasApp:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
